--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +15,90 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* .container {
+  max-height: 600px
+} */
+
+.main-container {
+  height: 100%
+}
+
+.divbox {
+  width: 100%;
+}
+
+.flex-container {
+  min-width: 100%;
+
+  max-height: 40%;
+}
+
+@media only screen and (min-width: 1400px) and (max-width: 2560px) {
+  .flex-container {
+    margin-left: 900px;
+    min-width: 32%;
+  max-width: 35%;
+  max-height: 40%;
+  }
+}
+
+@media only screen and (min-width: 1240px) and (max-width: 1400px) {
+  .flex-container {
+    margin-left: 850px;
+    min-width: 32%;
+    max-width: 35%;
+    max-height: 40%;
+  }
+}
+
+@media only screen and (min-width: 1000px) and (max-width: 1240px) {
+  .flex-container {
+    margin-left: 900px;
+    min-width: 38%;
+    max-width: 40%;
+    max-height: 40%;
+  }
+}
+
+.flex-container3 {
+  min-width: 25%;
+  max-width: 30%;
+}
+
+.flex-main-container {
+  max-width: 1450px;
+  height: max-content;
+}
+
+@media only screen and (max-width: 1280px) {
+  .flex-main-container {
+    max-width: 1350px;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .flex-main-container {
+    max-width: 1150px;
+  }
+
+  .flex-container {
+    min-width: 25%;
+  }
+}
+
+
+
+.image-container {
+  max-block-size: 118px;
+}
+
+.background-images {
+  height: 10%;
+  width: 5%;
+}
+
+.main {
+  font-family: 'Montserrat', sans-serif;
+}
+
